--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-  remote_theme: WildCodeSchool/workshops-jekyll-theme
+remote_theme: WildCodeSchool/workshops-jekyll-theme
 
 titles_from_headings:
   enabled: false
@@ -10,8 +10,8 @@ defaults:
       layout: "default"
 
 style: dev
-title: Workshop – Créer une API REST avec Express & MySQL  
+title: Créer une API REST avec Express & MySQL  
 description: "Projet fil rouge : Réseau social interne MyDigitalSchool"
 show_clone: false
 show_toc: true
-lang: fr
+lang: en
